feat: Implement token composability (#414)
