# x/token/internal/types/events.go
@@ -9,9 +9,16 @@ var (
 	EventTypeModifyTokenURIPermToken = "modify_token_uri_perm_token"
 	EventTypeRevokePermToken         = "revoke_perm_token"
 	EventTypeOccupySymbol            = "occupy_symbol"
+	EventTypeAttachToken             = "attach_token"
+	EventTypeDetachToken             = "detach_token"
+	EventTypeTransfer                = "transfer"
+	EventTypeTransferIDFT            = "transfer_idft"
+	EventTypeTransferNFT             = "transfer_nft"
+	EventTypeTransferIDNFT           = "transfer_idnft"
 
 	AttributeKeyName      = "name"
 	AttributeKeySymbol    = "symbol"
+	AttributeKeyTokenID   = "token_id"
 	AttributeKeyDenom     = "denom"
 	AttributeKeyOwner     = "owner"
 	AttributeKeyAmount    = "amount"
@@ -23,6 +30,7 @@ var (
 	AttributeKeyTo        = "to"
 	AttributeKeyResource  = "perm_resource"
 	AttributeKeyAction    = "perm_action"
+	AttributeKeyToTokenID = "to_token_id"
 
 	AttributeValueTokenTypeFT    = "ft"
 	AttributeValueTokenTypeNFT   = "nft"
